<resources>
    <string name="app_name">JoKenPo</string>
    <string name="jokenpo_app_logo">JokenpoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_nickname">Enter your Nickname, please</string>
    <string name="welcome">Welcome!</string>
    <string name="nickname_hint">NickName</string>
    <string name="let_s_play">Let\'s Play</string>
    <string name="pick_an_option">PICK AN OPTION:</string>
    <string name="let_s_play_game">LET\'S PLAY</string>
    <string name="play_again">Play Again</string>
    <string name="draw_game">IT\'S A DRAW</string>
    <string name="win_game">YOU WIN</string>
    <string name="lose_game">YOU LOSE</string>
</resources>